--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation 'com.google.android.material:material:1.1.0-beta01'
     implementation 'com.etebarian:meow-bottom-navigation:1.2.0'
+    implementation 'com.getbase:floatingactionbutton:1.10.1'
 }
