--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/LightTheme">
-        <activity android:name="edu.bluejack20_1.dearmory.activities.LogInActivity"></activity>
-        <activity android:name="edu.bluejack20_1.dearmory.activities.SplashActivity">
+        <activity android:name=".activities.ExpenseIncomeActivity"
+            android:parentActivityName=".activities.DiaryActivity"
+            android:windowSoftInputMode="adjustResize"></activity>
+        <activity android:name=".activities.LogInActivity" />
+        <activity android:name=".activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="edu.bluejack20_1.dearmory.activities.AppActivity"></activity>
-        <activity android:name="edu.bluejack20_1.dearmory.activities.DiaryActivity"
-            android:parentActivityName="edu.bluejack20_1.dearmory.activities.AppActivity"></activity>
-        <activity android:name="edu.bluejack20_1.dearmory.activities.MainActivity"></activity>
-        <activity android:name="edu.bluejack20_1.dearmory.activities.SignInActivity"></activity>
+        <activity android:name=".activities.AppActivity" />
+        <activity
+            android:name=".activities.DiaryActivity"
+            android:parentActivityName=".activities.AppActivity" />
+        <activity android:name=".activities.MainActivity" />
+        <activity android:name=".activities.SignInActivity" />
     </application>
 
 </manifest>
