--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
         }
     }
 
-    dataBinding{
+    dataBinding {
         enabled = true
     }
 }
@@ -70,6 +70,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics-ktx:17.6.0'
     implementation 'com.google.firebase:firebase-analytics:17.6.0'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
+    implementation 'com.google.firebase:firebase-storage-ktx'
+    implementation 'com.google.firebase:firebase-storage-ktx:19.2.0'
 
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -88,4 +91,7 @@ dependencies {
 
     //Android Navigation Fragment
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
+
+    //picasso
+    implementation 'com.squareup.picasso:picasso:2.71828'
 }
