--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,8 +86,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
     //Kodein Dependency Injection
-    implementation 'org.kodein.di:kodein-di-generic-jvm:6.2.1'
-    implementation 'org.kodein.di:kodein-di-framework-android-x:6.2.1'
+//    implementation 'org.kodein.di:kodein-di-generic-jvm:6.2.1'
+//    implementation 'org.kodein.di:kodein-di-framework-android-x:6.2.1'
 
     //Android Navigation Fragment
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.0'
