--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,5 +72,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
 
+    //Calendar
+    compile 'com.github.sundeepk:compact-calendar-view:3.0.0'
+
 
 }
