--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ android {
     }
 }
 
+repositories{
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
 //    implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    //noinspection GradleDependency
@@ -95,4 +99,7 @@ dependencies {
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //line chart
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
 }
