--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,10 @@ dependencies {
 
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //other
+    //noinspection GradleCompatible
+    compile "com.android.support:support-v4:28.0.0"
+    //noinspection GradleCompatible
+    implementation 'com.android.support:support-v4:20.0.0'
 }
