--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,4 +101,15 @@ dependencies {
     compile "com.android.support:support-v4:28.0.0"
     //noinspection GradleCompatible
     implementation 'com.android.support:support-v4:20.0.0'
+
+    //Messaging
+    implementation 'com.google.firebase:firebase-messaging:21.0.0'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
+
+    // Retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.0'
 }
