--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
     defaultConfig {
-        applicationId "com.example.dearmory"
+        applicationId "edu.bluejack20_1.dearmory"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
